[package]
name = "punify"
version = "0.1.1"
license = "MIT"
edition = "2021"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
idna = "0.5.0"
neon = "1"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1


[profile.release.package."*"]
opt-level = 3
